rubocop/examples/good/style_RedundantReturn.rb
# Avoid return where not required for flow of control.

# good
def some_method(some_arr)
  some_arr.size
end
